deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-router
  namespace: gateway
  labels:
    app: rest-router
spec:
  type: ClusterIP
  selector:
    app: rest-router
  ports:
    - name: http
      port: 80
      targetPort: 8080
